# web-server

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/sensor/: models.py  urls.py  views.py
apps/sensor/management/commands/: simulate_data.py
apps/sensor/migrations/: 0001_initial.py
apps/sensor/templates/sensor/: plot.html
pi/: settings.py
scripts/: create-env.sh
sensor/: models.py  urls.py  views.py
sensor/management/commands/: simulate_data.py
sensor/migrations/: 0001_initial.py
sensor/templates/sensor/: plot.html
server/: urls.py
server/settings/: __init__.py  base.py  development.py
